--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<link rel="icon" type="image/x-icon" href="favicon.ico" />
 	<base href="/">
-	<title data-ng-bind="page.getTitle()">Scowt</title>
+	<title data-ng-bind="page.getTitle()">Character Manager</title>
 </head>
 
 <body data-ng-cloak layout="row" layout-fill>
